--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "styled-components": "^3.4.6"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^4.5.2"
   }
 }
